Isi Daripada Presentasi

--- a/src/index.jade
+++ b/src/index.jade
@@ -3,69 +3,60 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Hello World
-
+    title Tempat Wisata di Sumatera Utara
     link(rel='stylesheet', type='text/css', href='build/build.css')
-
   body
-
     article
-
       section
-        h1 Hello World
-
+        h1 E2O : 
+        h2.nama 1. ELiezer Sitepu
+        h2.nama 2. Eben Ezer Sinaga
+        h2.nama 3. Oksiton Mesa K Purba
       section
-        h2 Keyboard Interaction
-        h3 Powered by <a href="https://github.com/markdalgleish/bespoke-keys">bespoke-keys</a>
-
+        h2 Tempat Wisata di Sumatera Utara
       section
-        h2 Touch Interaction
-        h3 Powered by <a href="https://github.com/markdalgleish/bespoke-touch">bespoke-touch</a>
-
+        h2 1. Danau Toba
+        img(src='../img/Danau_toba.PNG')
       section
-        h2 Responsive Slides
-        h3 Powered by <a href="https://github.com/markdalgleish/bespoke-scale">bespoke-scale</a>
-
+        h2 2. Air Terjun Dwi Warna Sibolangit
+        img(src='../img/DW.PNG')
       section
-        h2 Bullet List
-        h3.bullet Powered by <a href="https://github.com/markdalgleish/bespoke-bullets">bespoke-bullets</a>
-        ul
-          li Bullet 1
-          li Bullet 2
-          li Bullet 3
-
+        h2 3. Maha Vihara Adhi Maitreya
+        img(src='../img/vihara.PNG')
       section
-        h2 Syntax Highlighting
-        h3 Powered by <a href="http://twitter.com/LeaVerou">Lea Verou</a>'s <a href="https://github.com/LeaVerou/prism">Prism</a>
-        pre
-          code.language-javascript.
-            bespoke.from('article', [
-              classes(),
-              keys(),
-              touch(),
-              bullets('li, .bullet')
-            ]);
-
-      section(data-bespoke-hash='named-route')
-        h2 Named Route
-        h3 Powered by <a href="https://github.com/markdalgleish/bespoke-hash">bespoke-hash</a>
-        p Look up! This route has been named with a <em>'data-bespoke-hash'</em> attribute.
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h2 Emphatic Slide!
-        h3 Powered by <a href="https://github.com/markdalgleish/bespoke-backdrop">bespoke-backdrop</a>
-
+        h2 4. Pulau Samosir
+        img(src='../img/samosir.PNG')
       section
-        h2.bullet Just the beginning...
-        br
-        ul
-          li Edit <a href="http://jade-lang.com/">Jade</a> markup in <em>'src/index.jade'</em>
-          li Edit <a href="http://learnboost.github.io/stylus/">Stylus</a> styles in <em>'src/styles/main.styl'</em>
-          li Edit JavaScript in <em>'src/scripts/main.js'</em>
-        br
-        ul
-          li
-            strong Enjoy! :)
-            a(href='http://twitter.com/markdalgleish')  -@markdalgleish
-
+        h2 5. Istana Maimun
+        img(src='../img/maimun.PNG')
+      section
+        h2 6. Pulau Nias
+        img(src='../img/nias.PNG')
+      section
+        h2 7. Taman Wisata Iman Salib Kasih
+        img(src='../img/salib kasih.PNG')
+      section
+        h2 8. Kota Tarutung
+        img(src='../img/tarutung.PNG')
+      section
+        h2 9. Gunung Sibayak
+        img(src='../img/sibayak.PNG')
+      section
+        h2 10. Air Terjun Sipiso-Piso
+        img(src='../img/piso.PNG')
+      section
+        h2 11. Bukit Lawang
+        img(src='../img/lawang.PNG')
+      section
+        h2 12. Air Terjun Sigura-Gura
+        img(src='../img/gura.PNG')
+      section
+        h2 13. Graha Santa Maria Annai Velangkanni
+        img(src='../img/palangkani.PNG')
+      section
+        h2 14. Taman Alam Lumbini
+        img(src='../img/lumbini.PNG')
+      section
+        h2 10. Air Terjun Sipiso-Piso Tongging
+        img(src='../img/sibayak.PNG')
     script(src='build/build.js')
