--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -6,3 +6,106 @@
 
 @import 'prism/themes/prism-okaidia.css'
 // Check out "bower_components/prism/themes/" for available themes
+
+body
+  font-family "Verdana", Times, serif
+  font-weight 100
+  font-variant inherit
+  background-color #996
+
+h2
+  font-size 25px
+  color #006
+  position relative
+
+code[class*="language-"],
+pre[class*="language-"]
+  color #311212
+  text-shadow 0 1px rgba(0, 0, 0, 0.3)
+  font-family Consolas, Monaco, 'Andale Mono', monospace
+  direction ltr
+  text-align left
+  white-space pre
+  word-spacing normal
+  word-break normal
+  line-height 1.5
+  -moz-tab-size 4
+  tab-size 4
+  -webkit-hyphens none
+  -moz-hyphens none
+  -ms-hyphens none
+  hyphens none
+
+pre[class*="language-"]
+  padding 1em
+  margin .5em 0
+  overflow auto
+  border-radius 0.3em
+
+:not(pre) > code[class*="language-"],
+pre[class*="language-"]
+  background #272822
+
+:not(pre)
+  & > code[class*="language-"]
+    padding .1em
+    border-radius .3em
+
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata
+  color slategray
+
+.token
+  &.punctuation
+    color #f8f8f2
+  &.keyword
+    color #66d9ef
+  &.italic
+    font-style italic
+  &.entity
+    cursor help
+
+.namespace
+  opacity .7
+
+.token.property,
+.token.tag,
+.token.constant,
+.token.symbol,
+.token.deleted
+  color #f92672
+
+.token.boolean,
+.token.number
+  color #ae81ff
+
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.char,
+.token.builtin,
+.token.inserted
+  color #a6e22e
+
+.token.operator,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.style .token.string,
+.token.variable
+  color #f8f8f2
+
+.token.atrule,
+.token.attr-value,
+.token.function
+  color #e6db74
+
+.token.regex,
+.token.important
+  color #fd971f
+
+.token.important,
+.token.bold
+  font-weight bold
