--- a/src/index.jade
+++ b/src/index.jade
@@ -10,7 +10,7 @@ html
       section
         h1 E2O : 
         h2.nama 1. ELiezer Sitepu
-        h2.nama 2. Eben Ezer Sinaga
+        h2.nama 2. Eben Almaranata Sinaga
         h2.nama 3. Oksiton Mesa K Purba
       section
         h2 Tempat Wisata di Sumatera Utara
@@ -56,7 +56,4 @@ html
       section
         h2 14. Taman Alam Lumbini
         img(src='../img/lumbini.PNG')
-      section
-        h2 10. Air Terjun Sipiso-Piso Tongging
-        img(src='../img/sibayak.PNG')
     script(src='build/build.js')
