Mengedit File Html dan css pada Presentasi

--- a/src/index.jade
+++ b/src/index.jade
@@ -8,10 +8,12 @@ html
   body
     article
       section
-        h1 E2O : 
-        h2.nama 1. ELiezer Sitepu
-        h2.nama 2. Eben Almaranata Sinaga
-        h2.nama 3. Oksiton Mesa K Purba
+        h1 E2O
+        ul
+          li.li Terdiri dari :
+          li.nama 1. ELiezer Sitepu
+          li.nama 2. Eben Almaranata Sinaga
+          li.nama 3. Oksiton Mesa K Purba
       section
         h2 Tempat Wisata di Sumatera Utara
       section
