--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -7,21 +7,25 @@
 @import 'prism/themes/prism-okaidia.css'
 // Check out "bower_components/prism/themes/" for available themes
 
-body
-  font-family "Verdana", Times, serif
-  font-weight 100
-  font-variant inherit
-  background-color #996
-
-h2
-  font-size 25px
-  color #006
-  position relative
-
 code[class*="language-"],
 pre[class*="language-"]
-  color #311212
+  color #f8f8f2
   text-shadow 0 1px rgba(0, 0, 0, 0.3)
+  font-family Consolas, Monaco, 'Andale Mono', monospace
+  direction ltr
+  text-align left
+  white-space pre
+  word-spacing normal
+  word-break normal
+  line-height 1.5
+  -moz-tab-size 4
+  tab-size 4
+  -webkit-hyphens none
+  -moz-hyphens none
+  -ms-hyphens none
+  hyphens none
+  color #311212
+  text-shadow 0 1px rgba(0,0,0,0.3)
   font-family Consolas, Monaco, 'Andale Mono', monospace
   direction ltr
   text-align left
@@ -41,34 +45,47 @@ pre[class*="language-"]
   margin .5em 0
   overflow auto
   border-radius 0.3em
+  padding 1em
+  margin 0.5em 0
+  overflow auto
+  border-radius 0.3em
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"]
+  background #272822
   background #272822
 
 :not(pre)
   & > code[class*="language-"]
     padding .1em
     border-radius .3em
+    padding 0.1em
+    border-radius 0.3em
 
 .token.comment,
 .token.prolog,
 .token.doctype,
 .token.cdata
   color slategray
+  color #708090
 
 .token
   &.punctuation
     color #f8f8f2
+    color #f8f8f2
   &.keyword
+    color #66d9ef
     color #66d9ef
   &.italic
     font-style italic
+    font-style italic
   &.entity
+    cursor help
     cursor help
 
 .namespace
   opacity .7
+  opacity 0.7
 
 .token.property,
 .token.tag,
@@ -76,9 +93,11 @@ pre[class*="language-"]
 .token.symbol,
 .token.deleted
   color #f92672
+  color #f92672
 
 .token.boolean,
 .token.number
+  color #ae81ff
   color #ae81ff
 
 .token.selector,
@@ -88,6 +107,7 @@ pre[class*="language-"]
 .token.builtin,
 .token.inserted
   color #a6e22e
+  color #a6e22e
 
 .token.operator,
 .token.entity,
@@ -96,16 +116,58 @@ pre[class*="language-"]
 .style .token.string,
 .token.variable
   color #f8f8f2
+  color #f8f8f2
 
 .token.atrule,
 .token.attr-value,
 .token.function
   color #e6db74
+  color #e6db74
 
 .token.regex,
 .token.important
+  color #fd971f
   color #fd971f
 
 .token.important,
 .token.bold
   font-weight bold
+  font-weight bold
+
+body
+  font-family "Verdana", Times, serif
+  font-weight 100
+  font-variant inherit
+  background url(../../img/bg_home.jpg) no-repeat
+
+.nama
+  font-size 25px
+  font-family "Comic Sans MS", cursive
+  position relative
+
+h2
+  font-size 25px
+  color #006
+  position relative
+  font-family "Comic Sans MS", cursive
+
+ul
+  color #F00
+
+li
+  .li
+    font-size 25px
+    font-family Tahoma, Geneva, sans-serif
+    color #300
+    font-style italic
+
+.judul
+  font-size 40px
+  font-family "Comic Sans MS", cursive
+  font-weight bolder
+  color #000
+
+.font
+  color #F00
+  font-style italic
+  font Tahoma, Geneva, sans-serif
