Pengecekan kata2 yg salah

--- a/src/index.jade
+++ b/src/index.jade
@@ -11,51 +11,172 @@ html
         h1 E2O
         ul
           li.li Terdiri dari :
-          li.nama 1. ELiezer Sitepu
-          li.nama 2. Eben Almaranata Sinaga
-          li.nama 3. Oksiton Mesa K Purba
+          li.nama ELiezer Sitepu
+          li.nama Eben Almaranata Sinaga
+          li.nama Oksiton Mesa Krista Purba
       section
-        h2 Tempat Wisata di Sumatera Utara
+        ul
+          li.judul Tempat Wisata di Sumatera Utara
       section
-        h2 1. Danau Toba
+        h2 Danau Toba
         img(src='../img/Danau_toba.PNG')
       section
-        h2 2. Air Terjun Dwi Warna Sibolangit
+        ul
+          li
+          li - Merupakan Danau vulkanis terbesar dan terluas di dunia
+          li
+            | - Di tengah danau ini terdapat pulau samosir, dan merupakan daya tarik danau toba
+          li - Panorama alam Danau Toba adalah satu yang paling memikat
+          li - Berlokasi di parapat, Sumatera Utara
+      section
+        h2 Air Terjun Dwi Warna Sibolangit
         img(src='../img/DW.PNG')
       section
-        h2 3. Maha Vihara Adhi Maitreya
+        ul
+          li
+          li - Berada didalam kawasan hutan Sibolangit
+          li
+            | - Daya tarik air nya yaitu perpaduan antara biru (air dingin) dan putih (air hangat)
+          li
+            | - Memakan waktu perjalanan selama 2 jam dari kota medan ke sibolangit, 3 jam berjalan kaki untuk sampai ke Dwi warna
+          li - Berlokasi di Durin Sirugun, Kec. Sibolangit, Kab. Deli Serdang, Sumatera Utara
+      section
+        h2 Maha Vihara Adhi Maitreya
         img(src='../img/vihara.PNG')
       section
-        h2 4. Pulau Samosir
+        ul
+          li
+          li - Merupakan sebuah tempat peribadatan agama Buddha
+          li - Berdiri di atas lahan seluas 4.5 hektar
+          li - Memiliki suasana yang asri, tertata rapi, dan terjaga kebersihannya
+          li
+            | - Berlokasi di Jl. Cemara Boulevard Utara No. 8 Komplek Cemara Asri (Desa Sampali, Percut Sei Tuan), Medan, Sumatera Utara
+      section
+        h2 Pulau Samosir
         img(src='../img/samosir.PNG')
       section
-        h2 5. Istana Maimun
+        ul
+          li
+          li - Berketinggian sekitar 1000 meter dpl
+          li - Memiliki keindahan alam yang masih natural
+          li
+            | - Merupakan salah satu tempat terbaik untuk mempelajari sejarah dan riwayat suku Batak
+          li - Tuktuk adalah sebuah daerah yang berada di pulau Samosir
+          li - Berlokasi di Kabupaten Samosir, Sumatera Utara
+      section
+        h2 Istana Maimun
         img(src='../img/maimun.PNG')
       section
-        h2 6. Pulau Nias
+        ul
+          li
+          li - Merupakan peninggalan Kerajaan Deli
+          li
+            | - Secara arsitektural, bangunan Istana Maimun didominasi warna kuning yang merupakan warna khas Melayu
+          li
+            | - Untuk dapat masuk ke Istana Maimu ini, Anda harus membayar tiket masuk sebesar Rp 8 ribu per orang
+          li - Berlokasi di Jl. Brigadir Jendral Katamso, Medan, Sumatera Utara
+      section
+        h2 Pulau Nias
         img(src='../img/nias.PNG')
       section
-        h2 7. Taman Wisata Iman Salib Kasih
+        ul
+          li
+          li - Memiliki reputasi dunia dengan pesona lompat batu dan kegiatan selancar
+          li - Terletak di Samudera Hindia pada arah barat Pulau Sumatera
+          li
+            | - Gunung Sitoli merupakan kota yang menjadi salah satu sentral kepariwisataan di sana
+          li
+            | - Terdapat Museum Pusaka Nias dengan 6.500 koleksi benda budaya peninggalan Masyarakat Nias
+      section
+        h2 Taman Wisata Iman Salib Kasih
         img(src='../img/salib kasih.PNG')
       section
-        h2 8. Kota Tarutung
+        ul
+          li
+          li - Sebuah monumen berbentuk salib
+          li
+            | - Monumen untuk mengenang jasa, dedikasi, dan pengabdian yang luar biasa dari Dr. Ingwer Ludwig Nommensen
+          li
+            | - Nommensen merupakan missionaris asal Marsch Nordstrand, Jerman Utara yang mengajarkan agama Kristen di Tanah Batak
+          li - Berlokasi di Bukit Siatas Barita, Kec. Siatas Barita, Tarutung, Sumatera Utara
+      section
+        h2 Kota Tarutung
         img(src='../img/tarutung.PNG')
       section
-        h2 9. Gunung Sibayak
+        ul
+          li
+          li - Tarutung adalah ibukota Kab. Tapanuli Utara
+          li - Tarutung terkenal sebagai pusat wisata religi di Sumatera Utara
+          li
+            | - Sijaba Huta Ginjang, sebuah taman wisata alam di Sumatera Utara yang menghadap ke arah Danau Toba
+          li
+            | - Terdapat pemandian air soda yang hanya ada dua di dunia selain Venezuela, yaitu Aek Rara Tarutung
+      section
+        h2 Gunung Sibayak
         img(src='../img/sibayak.PNG')
       section
-        h2 10. Air Terjun Sipiso-Piso
+        ul
+          li
+          li - Gunung Sibayak merupakan gunung api yang masih aktif
+          li - Gunung sibayak disebut juga Gunung Raja
+          li - Pesona wisata gunung ini terletak pada panorama alam yang begitu indah
+          li - Memakan waktu perjalanan selama 2 jam dari kota Medan
+          li - Membayar tiket masuk Gunung Sibayak sebesar Rp 4 ribu per orang
+      section
+        h2 Air Terjun Sipiso-Piso
         img(src='../img/piso.PNG')
       section
-        h2 11. Bukit Lawang
+        ul
+          li
+          li
+            | - Daya tarik air terjun Sipiso-Piso Tongging terletak pada ketinggian air terjunnya mencapai 120 meter dan terletak dekat sekali dengan Gunung Sipiso-Piso
+          li
+            | - Untuk dapat berada di bagian bawah air terjun ini harus menuruni 1000 anak tangga yang berlika-liku
+          li - Berlokasi di Desa Tongging, Kabupaten Karo, Sumatera Utara
+      section
+        h2 Bukit Lawang
         img(src='../img/lawang.PNG')
       section
-        h2 12. Air Terjun Sigura-Gura
+        ul
+          li
+          li
+            | - Wisata dengan kegiatan penjelajahan hutan serta menyaksikan dari dekat kehidupan satwa di alam bebas
+          li
+            | - Bukit Lawang adalah sebuah perwujudan hutan tropis yang dekat dengan pintu masuk Taman Nasional Gunung Leuser
+          li - Menempuh perjalanan selama 3 jam dari Kota Medan
+          li - Berlokasi di Kecamatan Bohorok, Kabupaten Langkat, Sumatera Utara
+      section
+        h2 Air Terjun Sigura-Gura
         img(src='../img/gura.PNG')
       section
-        h2 13. Graha Santa Maria Annai Velangkanni
+        ul
+          li
+          li - Air terjun tertinggi di Indonesia
+          li - Berketinggian 250 meter dan berada di bentang alam dekat dengan Danau Toba
+          li - Udara dingin dan sejuk adalah karakter tempat wisata ini
+          li - Berlokasi di Kabupaten Toba Samosir, Sumatera Utara
+      section
+        h2 Graha Santa Maria Annai Velangkanni
         img(src='../img/palangkani.PNG')
       section
-        h2 14. Taman Alam Lumbini
+        ul
+          li
+          li - Salah satu destinasi wisata di rohani di Medan
+          li - Sebuah gereja umat Katholik yang sangat unik mirip sebuah kuil Hindu
+          li - Nama Annai Velangkani berarti Bunda dari Velangkanni
+          li
+            | - Berlokasi di Jl. Sakura III No. 7-10 Tanjung Selamat, Kec. Medan Tuntungan, Medan, Sumatera Utara
+      section
+        h2 Taman Alam Lumbini
         img(src='../img/lumbini.PNG')
+      section
+        ul
+          li
+          li - Taman Alam Lumbini terletak di kaki Gunung Sibayak
+          li
+            | - Memiliki keunikan berupa adanya sebuah pagoda yang merupakan pagoda tertinggi di Indonesia
+          li - Pagoda ini adalah replika Pagoda Shwedago yang ada di Myanmar
+          li - Terdapat lebih dari 2500 patung Buddha dan relief lainnya di kawsan wisata ini
+          li
+            | - Berlokasi di Desa Tongkoh, Kec. Dolat Rakyat, Berastagi, Kabupaten Karo, Sumatera Utara
     script(src='build/build.js')
