--- a/src/index.jade
+++ b/src/index.jade
@@ -10,7 +10,7 @@ html
       section
         h1 E2O
         ul
-          li.li Terdiri dari :
+          | Terdiri dari :
           li.nama ELiezer Sitepu
           li.nama Eben Almaranata Sinaga
           li.nama Oksiton Mesa Krista Purba
