--- a/src/index.jade
+++ b/src/index.jade
@@ -11,9 +11,9 @@ html
         h1 E2O
         ul
           | Terdiri dari :
-          li.nama ELiezer Sitepu
-          li.nama Eben Almaranata Sinaga
-          li.nama Oksiton Mesa Krista Purba
+          li.nama (12.111.2457) ELiezer Sitepu
+          li.nama (13.111.1301) Eben Almaranata Sinaga
+          li.nama (13.111.1084) Oksiton Mesa Krista Purba
       section
         ul
           li.judul Tempat Wisata di Sumatera Utara
