Hapus Gundaling dan Edit Html

--- a/src/index.jade
+++ b/src/index.jade
@@ -12,7 +12,7 @@ html
         ul
           | Terdiri dari :
           li.nama (12.111.2457) ELiezer Sitepu
-          li.nama (13.111.1301) Eben Almaranata Sinaga
+          li.nama (13.111.1031) Eben Almaranata Sinaga
           li.nama (13.111.1084) Oksiton Mesa Krista Purba
       section
         ul
@@ -179,4 +179,6 @@ html
           li - Terdapat lebih dari 2500 patung Buddha dan relief lainnya di kawsan wisata ini
           li
             | - Berlokasi di Desa Tongkoh, Kec. Dolat Rakyat, Berastagi, Kabupaten Karo, Sumatera Utara
+      section
+        h2 Terima Kasih
     script(src='build/build.js')
